# torchdaiv

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
AI_HUB/속성기반 감정분석 데이터/: url.txt
docs/2024/: 1차시_baseline_sentiment.ipynb  2차시_baseline_rnn.ipynb
docs/2025/: 2차시_인공신경망_인코더와 디코더.ipynb  4차시_사칙연산_계산기.ipynb  4차시_사칙연산_계산기_DIFF2.ipynb  4차시_한영_번역기.ipynb
res/: poster.pptx
src/: 1차시_baseline.ipynb  1차시_baseline_sentiment.ipynb  2차시_baseline_rnn.ipynb  2차시_baseline_wordvec.ipynb  3차시_baseline_translator.ipynb
src/main/datasets/: __init__.py  emotion.py
src/torchdaiv/: __init__.py
src/torchdaiv/datasets/: __init__.py  anki_kor_eng.py  calculator.py  emotion.py
src/torchdaiv/lectures/emotion/: nn.py
src/torchdaiv/lectures/emotion/util/: transforms.py  vocab.py  vocabulary.py
src/torchdaiv/lectures/enc2dec/util/: __init__.py  plot.py  train.py
src/torchdaiv/lectures/kor_eng_translator/: nn.py
src/torchdaiv/lectures/kor_eng_translator/util/: transforms.py  vocabulary.py
src/torchdaiv/lectures/kor_eng_translator/util/torchtext/vocab/: mock.py
src/torchtext/: __init__.py
