[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "torchdaiv"
version = "1.3.0"
description = "PyTorch Wrapper for dAiv's lecture"
authors = [{name = "dAiv", email = "cnudaiv@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
]

[project.urls]
Home = "https://github.com/dAiv-CNU/torchdaiv"
